# rts-0

./: .dockerignore  .env.example  .gitignore  AI-PLAN.md  BUGS.md  CLAUDE.md  DESIGN.md  DONE.md  Dockerfile  LONG_TERM_FIXES.md  PATHING-ARRIVAL-PLAN.md  PATHING-LOS-PLAN.md  PHASE_1_COMBAT_RULES.md  PHASE_2_ECONOMY_RULES.md  PHASE_3_DEFS.md  PHASE_4_TERRAIN_AND_PROJECTION.md  PLAN.md  README.md  REPLAY_INVESTIGATION.md  SELFPLAY_SPECTATOR_PLAN.md  SHORT_TERM_BUG_FIXES.md  TODO.md  deploy.sh  fixes.md  fly.beta.toml  fly.launcher.toml  fly.mainline.toml  fly.toml  lessons learned.md  package-lock.json  package.json  playtest_notes.md  quick_fix.md  run_ai_replay.sh  runaimatchup.sh  runaireplay.sh  runserver  runserver.sh  small_fixes.md
desktop/maccursor-shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/maccursor-shell/src-tauri/capabilities/: default.json  native-cursor-macos.json
desktop/maccursor-shell/src-tauri/permissions/autogenerated/: desktop_log_client_event.toml  desktop_log_info.toml  desktop_open_profile.toml  maccursor_start.toml  (+5 more)
desktop/maccursor-shell/src-tauri/src/: diagnostics.rs  main.rs  native_cursor.rs
desktop/pointer-lock-lab/src-tauri/: Cargo.toml  tauri.conf.json
desktop/pointer-lock-lab/src-tauri/src/: main.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/autogenerated/: cursor_grab.toml  cursor_visible.toml
desktop/src-tauri/src/: main.rs
server/: Cargo.toml  build.rs
server/assets/lab-scenarios/: lategame.json  manifest.json  render-preview.json  supply-300-hellhole.json  tank-trap-cluster-clear.json
server/assets/maps/: 1v1-no-terrain.json  1v1.json  3-player-map.json  4_player_map.json  default-handcrafted.json  default.json  low-econ.json  no-terrain.json  safe-bases.json
server/crates/ai/: Cargo.toml  build.rs
server/crates/ai/src/: ai_shared.rs  lib.rs  live.rs
server/crates/archcheck/: Cargo.toml
server/crates/archcheck/baselines/: sim-architecture.json
server/crates/archcheck/src/: lib.rs  main.rs  player_state_usages.rs
server/crates/contract/: Cargo.toml
server/crates/contract/src/: lib.rs
server/crates/phaserunner/: Cargo.toml
server/crates/phaserunner/src/: completion.rs  handoff.rs  lib.rs  main.rs  phase.rs  pr.rs  runner.rs  timing.rs
server/crates/protocol/: Cargo.toml
server/crates/protocol/src/: client_message_tests.rs  client_net_report.rs  command_tests.rs  compact_snapshot.rs  contract_metadata.rs  contract_tests.rs  formation_point.rs  lab_replay.rs  lab_scenario.rs  lib.rs  messagepack_frame.rs  observer_analysis.rs  server_message.rs
server/crates/protocol/tests/: public_surface.rs
server/crates/rules/: Cargo.toml
server/crates/rules/src/: balance.rs  combat.rs  defs.rs  economy.rs  faction.rs  kind.rs  lib.rs  target.rs  terrain.rs
server/crates/sim/: Cargo.toml
server/crates/sim-wasm/: Cargo.toml
server/crates/sim-wasm/src/: lib.rs
server/crates/sim/examples/: babylon_secrecy_fixture.rs
server/crates/sim/src/: command_budget.rs  config.rs  lib.rs  perf.rs  protocol.rs
server/migrations/: 20260608000001_match_history.sql  20260609000001_match_history_local_only.sql  20260609000002_suppress_automated_match_history.sql  20260609000003_match_replays.sql  20260615000001_match_history_visibility_metadata.sql  20260628000001_suppress_solo_match_history.sql  20260628000002_match_history_aborted_outcome.sql  20260709000001_ai_observation_match_runs.sql  20260715000001_client_stress_tests.sql
server/src/: ai_balance_matrix.rs  ai_matchup.rs  ai_perf_harness.rs  build_info.rs  client_assets.rs  client_optional_assets.rs  config.rs  connection_writer.rs  db.rs  dev_replay_pages.rs  dev_scenario_pages.rs  dev_scenarios.rs  interact_lab_artifacts.rs  lab_interact_artifacts.rs  lab_scenario_submission.rs  lab_scenarios.rs  lib.rs  lobby.rs  main.rs  main_replay_tests.rs  map_handoffs.rs  observability.rs  perf.rs  player_activity.rs  protocol.rs  stress_tests.rs  structured_log.rs  unit_design_lab.rs  wiki.rs
server/src/dev_scenarios/: command_car_corner.rs  scout_car_lake_reverse_l_path.rs  scout_car_open_ground_l_path.rs  tank_retreat.rs
server/src/game/: ability.rs  ai.rs  ai_shared.rs  command.rs  entity.rs  fog.rs  invariants.rs  map.rs  mod.rs  pathfinding.rs  replay.rs  selfplay.rs  setup.rs  smoke.rs  snapshot.rs  systems.rs  tests.rs
server/src/game/ai_core/: actions.rs  decision.rs  facts.rs  mod.rs  observation.rs  profiles.rs
server/src/game/entity/: entity.rs  kind.rs  mod.rs  order.rs  state.rs  store.rs  tests.rs
server/src/game/selfplay/: live.rs  milestones.rs  mod.rs  pending_build.rs  player_view.rs  replay.rs  scripts.rs  tests.rs  validation.rs
server/src/game/services/: ability_orders.rs  combat.rs  commands.rs  construction.rs  death.rs  economy.rs  geometry.rs  line_of_sight.rs  mod.rs  move_coordinator.rs  movement.rs  occupancy.rs  order_queue.rs  pathing.rs  production.rs  spatial.rs  standability.rs  supply.rs  world_query.rs
server/src/lobby/: connection.rs  crash_replay.rs  dev_replay.rs  dev_scenario_id.rs  faction_validation.rs  lab_replay_operations.rs  lab_scenario_driver.rs  lab_timeline.rs  launch.rs  live_tick.rs  map_catalog.rs  match_history_writes.rs  mod.rs  participants.rs  projection.rs  reconstruction.rs  replay_branch.rs  replay_session.rs  replay_validation.rs  room_task.rs  session_policy.rs  snapshot_fanout.rs  snapshots.rs  tests.rs  tick_control.rs
server/src/lobby/room_task/: branch.rs  dev.rs  helpers.rs  lab.rs  lab_driver.rs  lifecycle.rs  live.rs  lobby.rs  match_history.rs  observer.rs  replay.rs  summary.rs  types.rs
server/src/rules/: combat.rs  defs.rs  economy.rs  mod.rs  projection.rs  terrain.rs
server/src/structured_log/: render_worker.rs
server/src/tools/: ai_perf_harness.rs  hellhole_perf_harness.rs  hellhole_snapshot_stream.rs  hellhole_spec.rs  mod.rs
tools/play-the-bot/: Cargo.toml  README.md
tools/play-the-bot/src/: main.rs
(+2624 files in other folders)
