[package]
name = "rts-server"
version = "0.1.0"
edition = "2021"
description = "Authoritative server for Bewegungskrieg, a simple real-time strategy game"

[[bin]]
name = "rts-server"
path = "src/main.rs"

[[bin]]
name = "ai-matchup"
path = "src/ai_matchup.rs"
test = false
bench = false

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = "thin"

# Tests are dominated by long-running AI self-play simulations (60s+ each at
# opt-level=0). opt-level=1 with overflow-checks=true keeps the safety property
# the hardening tests rely on (a bad Build coord must panic, not silently wrap)
# while slashing test wall time. Dependencies get full optimization so the cold
# compile stays reasonable. Build and test share this profile, so `cargo build`
# followed by `cargo test` only rebuilds the test harness.
[profile.dev]
opt-level = 1
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3
