[package]
name = "rts-server"
version = "0.1.0"
edition = "2021"
description = "Authoritative server for Bewegungskrieg, a simple real-time strategy game"
default-run = "rts-server"

[workspace]
members = [
    ".",
    "crates/ai",
    "crates/archcheck",
    "crates/contract",
    "crates/protocol",
    "crates/rules",
    "crates/sim",
    "crates/sim-wasm",
]
default-members = [
    ".",
    "crates/ai",
    "crates/archcheck",
    "crates/contract",
    "crates/protocol",
    "crates/rules",
    "crates/sim",
    "crates/sim-wasm",
]
resolver = "2"

[[bin]]
name = "rts-server"
path = "src/main.rs"

[[bin]]
name = "ai-matchup"
path = "src/bin/ai_matchup.rs"
test = false
bench = false

[[bin]]
name = "ai-balance-matrix"
path = "src/bin/ai_balance_matrix.rs"
test = false
bench = false

[[bin]]
name = "ai-perf-harness"
path = "src/bin/ai_perf_harness.rs"
test = false
bench = false

[[bin]]
name = "hellhole-perf-harness"
path = "src/bin/hellhole_perf_harness.rs"
test = false
bench = false

[dependencies]
rts-contract = { path = "crates/contract" }
rts-ai = { path = "crates/ai" }
rts-protocol = { path = "crates/protocol" }
rts-rules = { path = "crates/rules" }
rts-sim = { path = "crates/sim" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["compression-gzip", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8", features = ["small_rng"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "macros", "migrate"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15"
pulldown-cmark = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 3
lto = "thin"

# Tests are dominated by long-running AI self-play simulations (60s+ each at
# opt-level=0). opt-level=1 with overflow-checks=true keeps the safety property
# the hardening tests rely on (a bad Build coord must panic, not silently wrap)
# while slashing test wall time. Dependencies get full optimization so the cold
# compile stays reasonable. Build and test share this profile, so `cargo build`
# followed by `cargo nextest run` only rebuilds the test harness.
[profile.dev]
opt-level = 1
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3
