[package]
name = "bewegungskrieg-desktop"
version = "0.1.0"
description = "Native desktop shell for Bewegungskrieg"
authors = ["Bewegungskrieg contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
desktop-debug-tools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
