[package]
name = "play_the_bot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Double-clickable lobby launcher for a player versus Jeff's AI"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
