[package]
name = "maccursor-shell"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for Bewegungskrieg release-channel playtests"
publish = false

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["block2", "NSEvent", "NSWindow", "objc2-core-foundation"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGDirectDisplay", "CGError", "CGRemoteOperation", "libc"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
