[package]
name = "rts-ai"
version = "0.1.0"
edition = "2021"
description = "RTS AI controllers, strategy profiles, and self-play harnesses"

[dependencies]
rts-contract = { path = "../contract" }
rts-protocol = { path = "../protocol" }
rts-rules = { path = "../rules" }
rts-sim = { path = "../sim" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
