[package]
name = "rts-phaserunner"
version = "0.1.0"
edition = "2021"
description = "Typed behavior model for RTS phased plan execution"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rts-phaserunner"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
