[package]
name = "rts-sim-wasm"
version = "0.1.0"
edition = "2021"
description = "Browser-loadable owner-safe local prediction facade for Bewegungskrieg"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rts-contract = { path = "../contract" }
rts-protocol = { path = "../protocol" }
rts-rules = { path = "../rules" }
rts-sim = { path = "../sim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
