[package]
name = "rts-sim"
version = "0.1.0"
edition = "2021"
description = "Reusable authoritative RTS simulation without server transport dependencies"

[dependencies]
rts-contract = { path = "../contract" }
rts-protocol = { path = "../protocol" }
rts-rules = { path = "../rules" }
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rayon = "1"
